[gd_scene load_steps=7 format=2]

[ext_resource path="res://game_objects/GameCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://game_objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://game_objects/Gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Cemetery.tscn" type="PackedScene" id=4]
[ext_resource path="res://game_objects/Shovel.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/GameWorld.gd" type="Script" id=6]

[node name="GameWorld" type="Node2D"]
script = ExtResource( 6 )

[node name="Cemetery" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 528, 690 )

[node name="UpdateGOTransform" parent="Player" index="11"]
node_from_path = NodePath("../../../GameWorld/Player/KinematicBody2D")

[node name="PlayerInventory" parent="Player" index="12"]
primary_node_path = NodePath("../../../GameWorld/ItemHolder/Shovel")
secondary_node_path = NodePath("../../../GameWorld/ItemHolder/Gun")

[node name="GameCamera" parent="." instance=ExtResource( 1 )]
position = Vector2( 528, 690 )

[node name="TransformCoupling" parent="GameCamera" index="0"]
transform_holder_leader_path = NodePath("../../Player")

[node name="ZombieHolder" type="Node" parent="."]

[node name="ItemHolder" type="Node" parent="."]

[node name="Shovel" parent="ItemHolder" instance=ExtResource( 5 )]

[node name="Gun" parent="ItemHolder" instance=ExtResource( 3 )]

[editable path="Player"]

[editable path="GameCamera"]
